# xl_df_cache

./: README.md  example.xlsx  example_notebook.ipynb  pyproject.toml
src/xl_df_cache/: __init__.py  xl_df_cache.py
