[project]
name = "xl-df-cache"
version = "0.1.0"
description = "A Utility Class for Caching Pandas Results and Writing them to Excel"
authors = [
    { name = "Chris", email = "chris@cjrobson.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xl_df_cache"]
